refactor: Update CORS configuration